--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!doctype html>
-<html lang="default">
+<html lang="fr">
 
 <head>
+
 	<meta charset="utf-8">
-	<meta name="keywords"
-		content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
+	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-
 
 	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script>
@@ -21,7 +19,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-	<title>.</title>
+	<title>Entreprise Webdesign Lyon - La Chouette agence</title>
 
 
 	<!-- Analytics -->
@@ -35,19 +33,12 @@
 	<div class="page-container">
 
 		<!-- bloc-0 -->
-		<div class="bloc bgc-white l-bloc " id="bloc-0">
+		<header class="bloc bgc-white l-bloc " id="bloc-0">
 			<div class="container bloc-sm">
-
 				<nav class="navbar row">
 					<div class="navbar-header">
-						<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web,
-							web design, illustrations, design de site web, site web, web, internet, site internet, site
-						</div>
 						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
 								alt="paris web design logo agence web meilleure agence" height="40" /></a>
-						<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web,
-							web design, illustrations, design de site web, site web, web, internet, site internet, site
-						</div>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
@@ -62,25 +53,26 @@
 							<li>
 							</li>
 							<li>
-								<a href="page2.html">page2 &gt;</a>
+								<a href="page2.html">Formulaire de contact &gt;</a>
 							</li>
 						</ul>
 					</div>
 				</nav>
 			</div>
-		</div>
+		</header>
 		<!-- bloc-0 END -->
 
 		<!-- bloc-1-presentation -->
-		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
+		<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
 			id="bloc-1-hero">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
 						<img src="img/logo.png" class="center-block image-resize-mode" width="100"
-							alt="La chouette agence, agence web paris, création logo paris" />
+							alt="Image d'un Webdesigner de notre agence web qui travail sur la maquette d'un site internet" />
 						<h1 class="text-center hero-bloc-text tc-white ">
-							La chouette agence.
+							La chouette agence<br>
+							Entreprise de Web design basée à Lyon
 						</h1>
 						<div class="text-center">
 							<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
@@ -89,7 +81,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
 		<!-- bloc-1-presentation END -->
 
 		<!-- bloc-2-services -->
@@ -97,7 +89,11 @@
 			<div class="container bloc-md">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+						<!--<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />-->
+						<h2>
+							La chouette agence est une agence de web design qui aide les entreprises à devenir
+							attractives et visibles sur Internet
+						</h2>
 					</div>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
@@ -138,19 +134,24 @@
 						</p>
 					</div>
 				</div>
-				<div class="row voffset-lg voffset">
+				<aside class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web"
-							src="img/citation.png" />
-
+						<!--<img alt="agence web, agence web paris, web design paris, stratégie web"
+							src="img/citation.png" />-->
+						<p>"La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer
+							l'essence
+							de notre entreprise et à l'intégrer à notre site. cela nous a aidé à doubler nos ventes en
+							lignes à Lyon"<br>
+							Maxime Guibard, PDG de À vos fourchettes
+						</p>
 					</div>
-				</div>
+				</aside>
 			</div>
 		</div>
 		<!-- bloc-2-services END -->
 
 		<!-- bloc-3-what-i-do -->
-		<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
+		<aside class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
 			id="bloc-3-what-i-do">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace black-background">
@@ -171,23 +172,24 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</aside>
 		<!-- bloc-3-what-i-do END -->
 
 		<!-- bloc-4-portfolio -->
 		<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
-			<div class="container bloc-lg">
+			<section class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+						<!--<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />-->
+						<h2>Nous travaillons avec beaucoup de clients, voici nos réalisations</h2>
 					</div>
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
-					<div class="col-sm-6">
+					<section class="col-sm-6">
 						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
 								src="img/1.jpg"
-								alt="paris web design logo agence web meilleure agence et refonte site web journal"
+								alt="image de journaux de l'entreprise lyonaise pour laquelle nous avons refait le design web de leur site internet"
 								class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-md text-center">
 							Refonte d'un site web pour un journal local
@@ -195,12 +197,12 @@
 						<p class="text-center">
 							Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 						</p>
-					</div>
+					</section>
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
 								src="img/2.jpg" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+								alt="Photo de la Photographe à qui nous avons créée un site web pour photographes" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
 						</h3>
@@ -214,7 +216,7 @@
 						<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
 								src="img/3.bmp" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
+								alt="Photo d'outils illustrant notre capacité à créer un site web pour un voyageur" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
 						</h3>
@@ -227,7 +229,7 @@
 						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
 								src="img/4.bmp" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+								alt="Photo de personne préparant un mariage sur ordinateur, illustrant notre capacité a créer un site pour une agence de mariage" /></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
 						</h3>
@@ -237,12 +239,12 @@
 						</p>
 					</div>
 				</div>
-			</div>
+			</section>
 		</div>
 		<!-- bloc-4-portfolio END -->
 
 		<!-- bloc-5-cta -->
-		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+		<aside class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 			<div class="container bloc-lg">
 				<div class="row">
 					<h2 class="mg-md text-center tc-white">
@@ -254,16 +256,16 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</aside>
 		<!-- bloc-5-cta END -->
 
 		<!-- Footer - bloc-8 -->
-		<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
 						<p class="text-center white">
-							La chouette agence - Agence web basée à Lyon.<br>
+							La chouette agence - Agence web basée à Lyon.
 						</p>
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
@@ -287,6 +289,7 @@
 											class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
+							<!-- pb design keywords met une separation-->
 							<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design,
 								illustrations, design de site web, site web, web, internet, site internet, site</div>
 						</div>
@@ -332,7 +335,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</footer>
 		<!-- Footer - bloc-8 END -->
 
 	</div>
