--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
 
 	<meta charset="utf-8">
-	<meta name="description" content="">
+	<meta name="description" content="Entreprise de Web design basée à Lyon, La Chouette agence travaille 
+	avec de nombreux clients pour divers projets web, tels que les créations de site internet ou les refontes de site internet afin de
+	donner une identité visuelle moderne à ses clients.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<meta name="robots" content="index,follow">
 
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
@@ -38,7 +41,7 @@
 				<nav class="navbar row">
 					<div class="navbar-header">
 						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
-								alt="paris web design logo agence web meilleure agence" height="40" /></a>
+								alt="Logo de l'entrepise de Web design La chouette à Lyon" height="40" /></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
@@ -51,9 +54,7 @@
 								<a href="index.html">Accueil</a>
 							</li>
 							<li>
-							</li>
-							<li>
-								<a href="page2.html">Formulaire de contact &gt;</a>
+								<a href="page2.html">Contactez-nous</a>
 							</li>
 						</ul>
 					</div>
@@ -69,7 +70,7 @@
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
 						<img src="img/logo.png" class="center-block image-resize-mode" width="100"
-							alt="Image d'un Webdesigner de notre agence web qui travail sur la maquette d'un site internet" />
+							alt="Logo de l'entrepise de Web design La chouette à Lyon" />
 						<h1 class="text-center hero-bloc-text tc-white ">
 							La chouette agence<br>
 							Entreprise de Web design basée à Lyon
@@ -86,10 +87,9 @@
 
 		<!-- bloc-2-services -->
 		<div class="bloc bgc-white l-bloc" id="bloc-2-services">
-			<div class="container bloc-md">
+			<section class="container bloc-md">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<!--<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />-->
 						<h2>
 							La chouette agence est une agence de web design qui aide les entreprises à devenir
 							attractives et visibles sur Internet
@@ -97,7 +97,7 @@
 					</div>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
-					<div class="col-sm-4">
+					<article class="col-sm-4">
 						<div class="text-center">
 							<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
@@ -108,8 +108,8 @@
 							Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de
 							zéro, laissez-nous vous réaliser un design dont vous serez fier.
 						</p>
-					</div>
-					<div class="col-sm-4">
+					</article>
+					<article class="col-sm-4">
 						<div class="text-center">
 							<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
@@ -118,10 +118,10 @@
 						</h3>
 						<p class="text-center ">
 							Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre
-							vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
+							vos objectifs commerciaux afin de vous proposer le meilleur design possible.
 						</p>
-					</div>
-					<div class="col-sm-4">
+					</article>
+					<article class="col-sm-4">
 						<div class="text-center">
 							<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
@@ -132,26 +132,25 @@
 							Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de
 							graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 						</p>
-					</div>
+					</article>
 				</div>
 				<aside class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-						<!--<img alt="agence web, agence web paris, web design paris, stratégie web"
-							src="img/citation.png" />-->
-						<p>"La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer
+						<p><span class="avis">"La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer
 							l'essence
 							de notre entreprise et à l'intégrer à notre site. cela nous a aidé à doubler nos ventes en
-							lignes à Lyon"<br>
+							lignes à Lyon"<br></span>
 							Maxime Guibard, PDG de À vos fourchettes
 						</p>
 					</div>
 				</aside>
-			</div>
+			</section>
 		</div>
 		<!-- bloc-2-services END -->
 
 		<!-- bloc-3-what-i-do -->
-		<aside class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
+		<aside
+			class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
 			id="bloc-3-what-i-do">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace black-background">
@@ -159,15 +158,16 @@
 						<h2 class="mg-md text-center tc-white">
 							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître
 							le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients
-							.<br>
+							.
 						</h2>
 						<p class="text-center white">
 							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles
 							aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
-							qui seront facilement trouvable sur les moteurs de recherche. <br><br><a
-								class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+							qui seront facilement trouvable sur les moteurs de recherche.<br><br>
+							<a class="ltc-white bold-link" href="page2.html">Contactez notre équipe
+							</a>
 						</p>
 					</div>
 				</div>
@@ -180,8 +180,7 @@
 			<section class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<!--<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />-->
-						<h2>Nous travaillons avec beaucoup de clients, voici nos réalisations</h2>
+						<h2>Nous travaillons avec beaucoup de clients,<br> voici nos réalisations</h2>
 					</div>
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
@@ -213,9 +212,9 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
-								src="img/3.bmp" class="img-responsive portfolio-thumb"
+								src="img/3.jpg" class="img-responsive portfolio-thumb"
 								alt="Photo d'outils illustrant notre capacité à créer un site web pour un voyageur" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
@@ -226,10 +225,10 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
-								src="img/4.bmp" class="img-responsive portfolio-thumb"
-								alt="Photo de personne préparant un mariage sur ordinateur, illustrant notre capacité a créer un site pour une agence de mariage" /></a>
+								src="img/4.jpg" class="img-responsive portfolio-thumb"
+								alt="Photo de personne préparant un mariage sur ordinateur, illustrant notre capacité à créer un site pour une agence de mariage" /></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
 						</h3>
@@ -283,15 +282,12 @@
 									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
-							<div class="col-sm-3">
+							<div class="col-sm-3 socialindex">
 								<div class="text-center">
 									<a class="social" href="index.html"><span
 											class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
-							<!-- pb design keywords met une separation-->
-							<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design,
-								illustrations, design de site web, site web, web, internet, site internet, site</div>
 						</div>
 						<div class="row">
 							<div class="col-sm-4">
@@ -301,34 +297,6 @@
 									<li><a href="pizza.com">pizza.com</a></li>
 									<li><a href="matoiture.com">matoiture.com</a></li>
 									<li><a href="immobilierseo.com">immobilierseo.com</a></li>
-								</ul>
-							</div>
-							<div class="col-sm-4">
-								Annuaires liste 1
-								<ul>
-									<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-									<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-									<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-									<li><a href="123seoture.com">123seo.com</a></li>
-									<li><a href="123site.com">123site.com</a></li>
-									<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-									<li><a href="listeagence.com">listeagence.com</a></li>
-									<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-									<li><a href="listeseo.com">listeseo.com</a></li>
-								</ul>
-							</div>
-							<div class="col-sm-4">
-								Annuaires liste 2
-								<ul>
-									<li><a href="betterseo.com">betterseo.com</a></li>
-									<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-									<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-									<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-									<li><a href="liensagogo.com">liensagogo.com</a></li>
-									<li><a href="backlink.com">backlink.com</a></li>
-									<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-									<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-									<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
 								</ul>
 							</div>
 						</div>
