--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<nav class="navbar row">
 					<div class="navbar-header">
 						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
-								alt="Logo de l'entrepise de Web design La chouette à Lyon" height="40" /></a>
+								alt="Logo et typographie de l'entrepise de Web design La chouette à Lyon" height="40" /></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
@@ -50,9 +50,6 @@
 					</div>
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
-							<li>
-								<a href="index.html">Accueil</a>
-							</li>
 							<li>
 								<a href="page2.html">Contactez-nous</a>
 							</li>
@@ -165,9 +162,7 @@
 							aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
-							qui seront facilement trouvable sur les moteurs de recherche.<br><br>
-							<a class="ltc-white bold-link" href="page2.html">Contactez notre équipe
-							</a>
+							qui seront facilement trouvable sur les moteurs de recherche.
 						</p>
 					</div>
 				</div>
@@ -188,7 +183,7 @@
 						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
 								src="img/1.jpg"
-								alt="image de journaux de l'entreprise lyonaise pour laquelle nous avons refait le design web de leur site internet"
+								alt="livres illustrant l'entreprise lyonaise pour laquelle nous avons refait le design du site internet"
 								class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-md text-center">
 							Refonte d'un site web pour un journal local
@@ -201,7 +196,7 @@
 						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
 								src="img/2.jpg" class="img-responsive portfolio-thumb"
-								alt="Photo de la Photographe à qui nous avons créée un site web pour photographes" /></a>
+								alt="Photographe à qui nous avons créée un site web pour photographes" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
 						</h3>
@@ -228,7 +223,7 @@
 						<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
 								src="img/4.jpg" class="img-responsive portfolio-thumb"
-								alt="Photo de personne préparant un mariage sur ordinateur, illustrant notre capacité à créer un site pour une agence de mariage" /></a>
+								alt="Photo de préparatif d'un mariage, illustrant notre capacité à créer un site pour une agence de mariage" /></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
 						</h3>
@@ -263,40 +258,39 @@
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
-						<p class="text-center white">
+						<p class="text-center tc-black">
 							La chouette agence - Agence web basée à Lyon.
 						</p>
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" href="index.html"><span class="fa fa-twitter icon-md icon"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+									<a class="social" href="index.html"><span class="fa fa-facebook icon-md icon"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md icon"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3 socialindex">
 								<div class="text-center">
-									<a class="social" href="index.html"><span
-											class="fa fa-instagram icon-md"></span></a>
+									<a class="social" href="index.html"><span class="fa fa-instagram icon-md icon"></span></a>
 								</div>
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-sm-4">
-								Partenaires
+							<div class="col-sm-4 tc-black partenaires">
+								<span class="h1lilink">Partenaires</span>
 								<ul>
-									<li><a href="voiture.com">voiture.com</a></li>
-									<li><a href="pizza.com">pizza.com</a></li>
-									<li><a href="matoiture.com">matoiture.com</a></li>
-									<li><a href="immobilierseo.com">immobilierseo.com</a></li>
+									<li class="tc-black"><a href="voiture.com" class="tc-black">voiture.com</a></li>
+									<li class="tc-black"><a href="pizza.com" class="tc-black">pizza.com</a></li>
+									<li class="tc-black"><a href="matoiture.com" class="tc-black">matoiture.com</a></li>
+									<li class="tc-black"><a href="immobilierseo.com" class="tc-black">immobilierseo.com</a></li>
 								</ul>
 							</div>
 						</div>
