--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js"></script>
+	<script async src="./js/jquery-2.1.0.js"></script>
+	<script async src="./js/bootstrap.js"></script>
+	<script async src="./js/blocs.js"></script>
+	<script async src="./js/jquery.touchSwipe.js" defer></script>
+	<script async src="./js/gmaps.js"></script>
 
 	<title>Entreprise Webdesign Lyon - La Chouette agence</title>
 
@@ -137,7 +137,7 @@
 							l'essence
 							de notre entreprise et à l'intégrer à notre site. cela nous a aidé à doubler nos ventes en
 							lignes à Lyon"<br></span>
-							Maxime Guibard, PDG de À vos fourchettes
+							<span class="pdg">Maxime Guibard, PDG de À vos fourchettes</span>
 						</p>
 					</div>
 				</aside>
@@ -180,9 +180,9 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<section class="col-sm-6">
-						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-								src="img/1.jpg"
+								src="img/1.webp"
 								alt="livres illustrant l'entreprise lyonaise pour laquelle nous avons refait le design du site internet"
 								class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-md text-center">
@@ -193,9 +193,9 @@
 						</p>
 					</section>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
-								src="img/2.jpg" class="img-responsive portfolio-thumb"
+								src="img/2.webp" class="img-responsive portfolio-thumb"
 								alt="Photographe à qui nous avons créée un site web pour photographes" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
@@ -207,9 +207,9 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
-								src="img/3.jpg" class="img-responsive portfolio-thumb"
+								src="img/3.webp" class="img-responsive portfolio-thumb"
 								alt="Photo d'outils illustrant notre capacité à créer un site web pour un voyageur" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
@@ -220,9 +220,9 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
-								src="img/4.jpg" class="img-responsive portfolio-thumb"
+								src="img/4.webp" class="img-responsive portfolio-thumb"
 								alt="Photo de préparatif d'un mariage, illustrant notre capacité à créer un site pour une agence de mariage" /></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
