--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
-						<img src="img/logo.png" class="center-block image-resize-mode" width="100"
-							alt="Logo de l'entrepise de Web design La chouette à Lyon" />
+						<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo de l'entrepise de Web design La chouette agence à Lyon" />
 						<h1 class="text-center hero-bloc-text tc-white ">
 							La chouette agence<br>
 							Entreprise de Web design basée à Lyon
