--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 
-	<script async src="./js/jquery-2.1.0.min.js"></script>
-	<script async src="./js/bootstrap.min.js"></script>
-	<script async src="./js/blocs.min.js"></script>
-	<script async src="./js/jquery.touchSwipe.min.js"></script>
-	<script async src="./js/gmaps.min.js"></script>
+	<script defer src="./js/jquery-2.1.0.min.js"></script>
+	<script defer src="./js/bootstrap.min.js"></script>
+	<script defer src="./js/blocs.min.js"></script>
+	<script defer src="./js/jquery.touchSwipe.min.js"></script>
+	<script defer src="./js/gmaps.min.js"></script>
 
 	<title>Entreprise Webdesign Lyon - La Chouette agence</title>
 
