--- a/la-chouette-agence-lyon.html
+++ b/la-chouette-agence-lyon.html
@@ -16,11 +16,11 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 
 
-	<script async src="./js/jquery-2.1.0.min.js"></script>
-	<script async src="./js/bootstrap.min.js"></script>
-	<script async src="./js/blocs.min.js"></script>
-	<script async src="./js/jqBootstrapValidation.min.js"></script>
-	<script async src="./js/formHandler.min.js"></script>
+	<script defer src="./js/jquery-2.1.0.min.js"></script>
+	<script defer src="./js/bootstrap.min.js"></script>
+	<script defer src="./js/blocs.min.js"></script>
+	<script defer src="./js/jqBootstrapValidation.min.js"></script>
+	<script defer src="./js/formHandler.min.js"></script>
 
 	<title>Formulaire de Contact pour l'entreprise Webdesign "La chouette agence" de Lyon</title>
 
@@ -50,7 +50,7 @@
 								<a href="index.html">Accueil</a>
 							</li>
 							<li>
-								<a href="La chouette agence - Lyon.html">Contactez-nous</a>
+								<a href="la-chouette-agence-lyon.html">Contactez-nous</a>
 							</li>
 						</ul>
 					</div>
